# rtgsfit

./: .gitignore  LICENSE  Makefile  README.md  c_cblas.py  c_gradient.py  const_to_file.py  constants.h  constants_template.c  find_x_point.c  find_x_point.h  grad_shafranov.py  gradient.c  gradient.h  greens.py  make_and_run.sh  poisson_solver.c  poisson_solver.h  read_pcs_AI.m  requirements.txt  rtgsfit.c  rtgsfit.h  solve_tria.c  solve_tria.h  test_cblas.py  test_find_x_point.py  test_gradient.py  test_poisson_solver.py  test_rtgsfit.py  test_solve_tria.py
.github/workflows/: main.yml
documentation/: create_python_enviroment.txt
examples/: example_01_matlab_minimal.m
files_for_rtgsfit/: coil_curr.txt  flux_norm.txt  instructions_for_aleksei.txt  meas.txt  pfcoil_index.txt  psi_total.txt  rtgsfit_idx.txt
py-files/: parse_sensors.py  plot_timed_data.py  replay_rtgsfit_from_python.py  single_time_slice_iterate.py  write_data_to_mdsplus.py
shell_scripts/: replay_range_of_pulses.sh
src/: Makefile  Makefile_no_MDS  constants.h  constants_template.c  find_x_point.c  find_x_point.h  gradient.c  gradient.h  poisson_solver.h  rtgsfit.c  rtgsfit.h  solve_tria.c  solve_tria.h
tests/: Makefile  gains.h  makefile_test  makefile_test_with_rtgsfit_fileIO  makefile_time  replay_rtgsfit.c  replay_rtgsfit.h  rtgsfit_fileIO.c  test_find_x_point.py  test_gradient.py  test_lapacke.c  test_poisson_solver.py  test_rtgsfit.py  test_rtgsfit_time.c  test_solve_tria.py
tests/pcs_vs_python/: .gitignore  README.md  pyproject.toml
tests/pcs_vs_python/data/: .gitignore  default_config.yaml
tests/pcs_vs_python/src/pcs_vs_python/: config_loader.py  preshot.py
tests/pcs_vs_python/src/pcs_vs_python/plot/: components.py  examples.py
tests/pcs_vs_python/src/pcs_vs_python/replay/: gsfit.py  input_signals.py  out_data_rtgsfit.py  rtgsfit.py
tests/rtgsfit_verify_analytic/: .gitignore  README.md  pyproject.toml
tests/rtgsfit_verify_analytic/data/: reference_output_dict.npy
tests/rtgsfit_verify_analytic/latex/Analytic_Solution/: main.tex
tests/rtgsfit_verify_analytic/latex/Mutual_Induction/: main.tex
tests/rtgsfit_verify_analytic/shell_scripts/: copy_constants_and_compile_rtgsfit.sh
tests/rtgsfit_verify_analytic/src/rtgsfit_verify_analytic/: analytic_soln.py  cnst.py  generate_constants_c.py  greens_matrices.py  measurements.py  mutual_inductance.py  poisson_matrix.py  read_constants_c.py  replay_rtgsfit.py
tests/rtgsfit_verify_analytic/src/rtgsfit_verify_analytic/plot/: b_field.py  current.py  psi.py
tests/rtgsfit_verify_analytic/tests/: conftest.py  test_analytic_soln.py  test_output_dict_contents.py  test_regression_output.py  test_run_pipeline.py
tests/rtgsfit_vs_gsfit/: .gitignore  README.md  pyproject.toml
tests/rtgsfit_vs_gsfit/data/: .gitignore  default_config.json
tests/rtgsfit_vs_gsfit/shell_scripts/: create_regression_dicts.sh
tests/rtgsfit_vs_gsfit/src/rtgsfit_vs_gsfit/: calc_meas.py  cnst.py  config_loader.py  initialise_rtgsfit_node.py  prep_meas_coil_curr.py  replay_gsfit.py  replay_rtgsfit.py  rtgsfit_compile_setup.py  rtgsfit_pred_meas.py  rtgsfit_signalprep.py
tests/rtgsfit_vs_gsfit/src/rtgsfit_vs_gsfit/plot/: components.py  examples.py  meas.py  meas_contributions.py  psi.py
tests/rtgsfit_vs_gsfit/src/rtgsfit_vs_gsfit/table/: dataframes.py  save_to_csv.py
tests/rtgsfit_vs_gsfit/tests/: conftest.py  test_integration_rtgsfit_vs_gsfit.py  test_run_gsfit.py  test_run_rtgsfit.py
utility/: const_to_file.py  curr_dens.py  mdsplus_const_to_file.py  py_to_ctypes.py
